<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    app:cardMaxElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_card_blue"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/card_logo"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/app_white2"
            android:contentDescription="@string/add_card_title_string" />

        <TextView
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/sample_number_string"
            android:textColor="@color/app_white2"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/sample_name_string"
                android:textColor="@color/app_white2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/card_expire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:text="@string/sample_expire_string"
                android:textColor="@color/app_white2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>