<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/app_white2"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:contentPadding="5dp"
        tools:context=".ACTIVITY.AddCard">

        <LinearLayout
            android:id="@+id/wholeview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_circle_up"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/app_blue"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
                app:cardMaxElevation="15dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/addcard_result_logo"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:background="@color/app_green"
                        android:contentDescription="@string/add_card_title_string" />

                    <TextView
                        android:id="@+id/addcard_result_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/sample_number_string"
                        android:textColor="@color/app_white2"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/addcard_result_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/sample_name_string"
                            android:textColor="@color/app_white2"
                            android:textSize="16sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/addcard_result_expire"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="2"
                            android:padding="5dp"
                            android:text="@string/sample_expire_string"
                            android:textColor="@color/app_white2"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_back"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/app_blue"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
                app:cardMaxElevation="15dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/app_black" />

                        <TextView
                            android:id="@+id/addcard_result_cvc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="2"
                            android:text="@string/sample_expire_string"
                            android:textColor="@color/app_white2"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_green"
                    android:textColorHint="@color/app_white2"
                    app:hintTextColor="@color/app_white2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addcard_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/app_green"
                        android:digits="0123456789"
                        android:hint="@string/add_number_string"
                        android:inputType="number"
                        android:maxLength="19"
                        android:maxLines="1"
                        android:textColor="@color/app_white2"
                        android:textColorHint="@color/app_white2" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/app_green"
                    android:textColorHint="@color/app_white2"
                    app:hintTextColor="@color/app_white2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addcard_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/app_green"
                        android:hint="@string/add_name_string"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/app_white2"
                        android:textColorHint="@color/app_white2" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@color/app_green"
                        android:textColorHint="@color/app_white2"
                        app:hintTextColor="@color/app_white2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addcard_expire"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/app_green"
                            android:digits="0123456789"
                            android:hint="@string/add_expire_string"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1"
                            android:textColor="@color/app_white2"
                            android:textColorHint="@color/app_white2" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@color/app_white2"
                        android:textColorHint="@color/app_white2"
                        app:hintTextColor="@color/app_white2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addcard_cvc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/app_green"
                            android:digits="0123456789"
                            android:hint="@string/add_cvc_string"
                            android:inputType="number"
                            android:maxLength="3"
                            android:maxLines="1"
                            android:textColor="@color/app_white2"
                            android:textColorHint="@color/app_white2" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/addcard_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/add_card_title_string"
                android:textColor="@color/app_white2"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>